completed my cart files

--- a/style/styles.css
+++ b/style/styles.css
@@ -4,10 +4,10 @@
     font-family: Raleway;
 }
 
-h1{
+.title{
     font-size: 42px;
     font-weight: 400;
-    margin: 85px;
+    margin: 100px;
 }
 
 .nav-bar {
@@ -118,7 +118,12 @@ h1{
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap; 
-    gap: 20px 80px;
+    position: relative;
+    gap: 20px 70px;
+}
+
+.product-container a img:hover{
+    transform: translateY(-5px);
 }
 
 .productpagecontainer {
@@ -161,7 +166,7 @@ h1{
 }
 
 .size-options {
-    font-family: Source Sans Pro;
+    display: flex;
 }
 
 .size-options button {
@@ -173,6 +178,11 @@ h1{
 }
 
 .size-options button.selected {
+    background: black;
+    color: white;
+}
+
+.size-optionscanvas button.selected {
     background: black;
     color: white;
 }
@@ -196,10 +206,137 @@ h1{
 .add-to-cart {
     background-color: #5ECE7B;
     color: white;
-    width: 292px;
+    width: 270px;
     padding: 16px 32px;
     border: none;
 }
 
+/* cartpage */
+.cart-container{
+    max-width: 1500px;
+    margin-left: 100px;  
+}
 
+.cart-items {
+    display: flex;
+    flex-direction: column;
+}
+
+.cart-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 20px;
+    padding-top: 20px;
+}
+
+.item-details {
+    flex: 1;
+}
+
+p {
+    font-size: 16px;
+    margin: 10px 0;
+}
+
+.item-quantity {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.quantity-btn {
+    border: 1px solid #333;
+    background: white;
+    color: black;
+    padding: 5px 10px;
+    cursor: pointer;
+    font-size: 18px;
+    margin:  30px;
+}
+
+.item-image img {
+    width: 200px;
+    height: 288px;
+    object-fit: cover;
+    border-radius: 8px;
+}
+
+.cart-summary {
+    margin-top: 30px;
+    font-size: 18px;
+}
+
+.cart-summary p {
+    margin: 5px 0;
+}
+
+.order-btn {
+    background: #5ECE7B;
+    color: white;
+    /* padding: 12px 20px; */
+    width: 279px;
+    height: 43px;
+    font-size: 18px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    margin-top: 15px;
+    margin-bottom: 100px;
+}
+
+/* offcanvas */
+.notification{
+    position: relative;
+    display: inline-block;
+}
+
+.notification .badge{
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    padding: 3px 5px;
+    border-radius: 50%;
+    background: black;
+    color: white;
+}
+
+.size-optionscanvas{
+    margin-top: 1px;
+    margin-bottom: 20px;
+}
+
+.size-optionscanvas button {
+    font-size: 14px;
+    padding: 2px 2px;
+    border: 1px solid #000;
+    background: white;
+    cursor: pointer;
+}
+
+.total{
+    display: flex;
+    justify-content: space-between;
+}
+
+.view-checkout{
+    display: flex;
+    justify-content: center;
+    justify-content: space-around;
+}
+
+.viewbag{
+    background-color: white;
+    color: #000;
+    width: 140px;
+    height: 43px;
+}
+
+.checkout{
+    background-color: #5ECE7B;
+    color: white;
+    width: 140px;
+    height: 43px;
+}
 
